# filmsmash

./: Cargo.toml  README.org
src/: film.rs  main.rs  ranker.rs  tui.rs
