[package]
name = "filmsmash"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.27"
time = { version = "0.3", features = ["macros", "parsing"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "4.3.0"
csv = "1.3.1"
colored = "3.0.0"
once_cell = "1.21.3"
